2022-10-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt.pk: Change documentation of TV_FIELD_MAPPED.
	* libpoke/pkl-gen.pks (struct_field_mapper): Do not pass a
	formatted_value to the TV_FIELD_MAPPED tracing event.
	* poke/pk-tracer.pk (pk_tv_action_field_mapped): Do not get a
	formatted_value argument and format the value instead.

2022-10-13  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Auto-Remapping): New section.
	(@code{vm_autoremap}): Likewise.
	(@code{vm_set_autoremap}): Likewise.

2022-10-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ops.def: Define PKL_AST_OP_REMAP.
	* libpoke/pkl-lex.l: Recognize token `remap'.
	* libpoke/pkl-tab.y: New token REMAP.
	(unary_operator): Syntax for the `remap' operator.
	* libpoke/pkl-typify.c (pkl_typify1_ps_op_remap): New handler.
	(pkl_phase_typify1): Register new handler.
	* libpoke/pkl-gen.c (pkl_gen_ps_op_remap): New handler.
	(pkl_phase_gen): Register new handler.
	(pkl_gen_ps_var): Use AREMAP instead of REMAP.
	(pkl_gen_pr_indexer): Likewise.
	(pkl_gen_ps_struct_ref): Likewise.
	* libpoke/pkl-insn.def: New macro-instruction AREMAP.
	* libpoke/pkl-asm.c (pkl_asm_insn_aremap): New function.
	(pkl_asm_insn): Hanlde PKL_INSN_AREMAP.
	* libpoke/pkl-asm.pks (atrim): Use aremap intead of remap.
	* testsuite/poke.map/remap-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-10-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h: Prototypes for pk_autoremap and
	pk_set_autoremap.
	* libpoke/libpoke.c (pk_autoremap): New function.
	(pk_set_autoremap): Likewise.
	* libpoke/pvm.h: Prototypes for pvm_autoremap and
	pvm_set_autoremap.
	* libpoke/pvm.c (pvm_autoremap): New function.
	(pvm_set_autoremap): Likewise.
	* libpoke/pvm.jitter (state-struct-runtime-c): Add field
	`autoremap' to the VM.
	(state-initialization-c): Initialize `autoremap' to the default
	value 0.
	(pusharem): New instruction.
	(poparem): Likewise.