@@ -1212,17 +1212,6 @@ int pk_val_equal_p (pk_val val1, pk_val val2) LIBPOKE_API;
 void pk_print_val (pk_compiler pkc, pk_val val,
                    pk_val *exit_exception) LIBPOKE_API;
 
-/* Print the given value using the given settings.
-   See above for an explanation for EXIT_EXCEPTION.  */
-
-#define PK_PRINT_F_MAPS   1  /* Output value and element offsets.  */
-#define PK_PRINT_F_PPRINT 2  /* Use pretty-printers.  */
-
-void pk_print_val_with_params (pk_compiler pkc, pk_val val,
-                               int depth, int mode, int base,
-                               int indent, int acutoff,
-                               uint32_t flags, pk_val *exit_exception) LIBPOKE_API;
-
 /* Foreign IO devices interface.  */
 
 typedef uint64_t pk_iod_off;
