@@ -1,5 +1,14 @@
 2022-10-14  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/libpoke.h (PK_PRINT_F_MAPS): Remove.
+	(PK_PRINT_F_PPRINT): Likewise.
+	(pk_print_val_with_params): Remove function prototype.
+	* libpoke/libpoke.c (pk_print_val_with_params): Remove function.
+	* testsuite/poke.libpoke/values.c (testcase_pk_val_equal_p): Use
+	pk_print_val instead of pk_print_val_with_params.
+
+2022-10-14  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-rt.pk: Change documentation of TV_FIELD_MAPPED.
 	* libpoke/pkl-gen.pks (struct_field_mapper): Do not pass a
 	formatted_value to the TV_FIELD_MAPPED tracing event.
